--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ section .side {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(oliver/images/brain.png) ;
+    background: url(images/brain.png);
 }
 
 section .side#side1 {
