--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ section .side#side2 {
     background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
  background-blend-mode: multiply;
     color: #fff;
-    padding: 100px;
+    padding: 100px,100px,100px,100px;
     padding-top: 100vh;
 }
 
